Fixed font on iOS 8

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -393,7 +393,6 @@ Use `.group-instruction` to create an instruction block in the middle of a secti
 .group-instruction {
   display: block;
   line-height: @grid-vertical;
-  .set-font-large();
 
   // If there are more than one paragraph, create padding between them
   p:not(:first-child) {
@@ -408,8 +407,6 @@ Use `.group-instruction-jumbtron` to create a very large instruction block in th
 // 1. Reset margins of header to make it go to the top of the page
 // 2. Vertically center a span in the middle of the header
 .group-instruction-jumbotron {
-  .set-font-jumbotron();
-  line-height: @grid-vertical * 1.5;
   p {
     margin-top: @grid-vertical * 1.5;
     margin-bottom: @grid-vertical * 1.5;
@@ -422,6 +419,11 @@ Use `.group-instruction-jumbtron` to create a very large instruction block in th
     span {
       display: table-cell; // [2]
       vertical-align: middle; // [2]
+    }
+  }
+  .group-instruction--main {
+    span {
+      line-height: @grid-vertical * 1.5;
     }
   }
 }
