--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -16,8 +16,8 @@ Fonts in use:
 (Bold letters use HelveticaNeueLT-Roman instead of HelveticaNeueLTStd-Lt.)
 */
 
-@font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLTStd-Lt', 'Helvetica Neue', 'Arial', 'Helvetica', 'sans-serif';
-@font-family-bold: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLT-Roman', 'Helvetica Neue', 'Arial', 'Helvetica', 'sans-serif';
+@font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLTStd-Lt', 'HelveticaNeue', 'Helvetica Neue',  'Arial', 'Helvetica', 'sans-serif';
+@font-family-bold: 'HelveticaNeue', 'Helvetica Neue',  'HelveticaNeueLT-Roman', 'Arial', 'Helvetica', 'sans-serif';
 
 @size-font-jumbotron: 70px;
 @size-font-large: 48px;
@@ -69,11 +69,11 @@ Font mixins.
 h1, h2, h3, h4 {
   margin-top: 0;    // [1]
   margin-bottom: 0; // [1]
+  .set-font-bold;
 }
 
 h1 {
   font-size: @size-font-topheading;
-  .set-font-bold;
 }
 
 h2 {
@@ -97,12 +97,21 @@ h2 {
   color: @color-text-highlighted;
 }
 
+.text-jumbotron {
+  .set-font-jumbotron();
+}
+
+.text-jumbotron.active {
+  color: @color-text-active;
+}
+
+.text-btn {
+  .set-font-bold();
+}
+
 /*
 Use `.text-details` to separate details from body text.
 */
-.text-active {
-  color: @color-text-active;
-}
 
 .text-details {
   font-size: @size-font-small;
